native/native.tests/cli-tests/testData/cli/reportPerfWithError.out
native/native.tests/cli-tests/testData/cli/reportPerfWithError.kt:1:19: error: initializer type mismatch: expected 'String', actual 'Int'.
val str: String = 42
                  ^^
COMPILATION_ERROR
